# miniclaw

./: .gitignore  AGENTS.md  Cargo.toml  README.md
.github/workflows/: ci.yml
_bmad-output/implementation-artifacts/: 1-1-version-command.md  1-2-cli-framework-setup.md  1-3-verbose-logging-mode.md  1-4-help-system.md  10-1-telegram-bot-adapter.md  10-2-telegram-whitelist.md  10-3-gateway-daemon-mode.md  11-1-structured-logging-system.md  11-2-output-stream-management.md  11-3-performance-metrics.md  11-4-error-handling-and-reliability.md  2-1-configuration-file-management.md  2-2-interactive-onboarding-command.md  2-3-workspace-structure-creation.md  2-4-skills-directory-setup.md  2-5-sessions-directory-setup.md  3-1-chat-hub-core-infrastructure.md  3-2-inbound-message-processing.md  3-3-outbound-message-delivery.md  3-4-message-tool-integration.md  4-1-llm-provider-trait-and-architecture.md  4-2-openai-compatible-provider.md  4-3-ollama-local-provider.md  4-4-agent-one-shot-command.md  5-1-agent-loop-implementation.md  5-2-context-builder.md  5-3-session-management-in-agent-loop.md  6-1-tool-registry-and-trait.md  6-2-filesystem-tool.md  6-3-exec-tool.md  6-4-web-tool.md  6-5-spawn-tool.md  7-1-cron-tool-task-scheduling.md  7-2-write-memory-tool.md  7-3-skill-management-tools.md  8-1-short-term-memory-in-memory.md  8-2-long-term-memory-memory-md.md  8-3-daily-notes.md  8-4-memory-ranker.md  9-1-session-manager-core.md  (+17 more)
_bmad-output/planning-artifacts/: architecture.md  epics.md  prd.md  product-brief-miniclaw-2026-02-14.md
_bmad/_config/: agent-manifest.csv  files-manifest.csv  manifest.yaml  workflow-manifest.csv
_bmad/_memory/: config.yaml
_bmad/bmb/: config.yaml
_bmad/bmm/: config.yaml
_bmad/cis/: config.yaml
benches/: agent_loop_bench.rs
docs/: OPTIMIZE_PROJECT.md  PLAN_PROJECT.md
scripts/: check-binary-size.sh
src/: cli.rs  gateway.rs  lib.rs  main.rs
tests/: agent_loop_integration.rs  chat_tests.rs  chat_types_tests.rs  cli_tests.rs  gateway_tests.rs  help_tests.rs  models_tests.rs  onboard_tests.rs  performance_tests.rs  session_integration_tests.rs  session_tests.rs  stream_separation_tests.rs  telegram_tests.rs  tool_integration_tests.rs  verbose_tests.rs  version_tests.rs  workspace_tests.rs
(+60 files in other folders)
