[package]
name = "miniclaw"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"

[dependencies]
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "time"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "2.0"
dirs = "6.0"
inquire = "0.9.3"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
bytes = "1.0"
futures = { version = "0.3.32", features = ["async-await"] }
reqwest = { version = "0.12", features = ["json", "stream"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
