[package]
name = "miniclaw"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"

[dependencies]
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "time"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "2.0"
dirs = "6.0"
inquire = "0.9.3"
chrono = { version = "0.4", features = ["serde"] }
sysinfo = { version = "0.33", default-features = false, features = ["system"] }
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
bytes = "1.0"
futures = { version = "0.3.32", features = ["async-await"] }
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"], default-features = false }
teloxide = { version = "0.15", features = ["macros"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
criterion = { version = "0.5", features = ["async_tokio"] }

[[bench]]
name = "agent_loop_bench"
harness = false
